--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 </head>
 
 <body>
-    <div class="desktop-only cursor no-display" aria-hidden="true">view</div>
-
     <header>
         <h1 class="logo">
             <a href="/" aria-label="Go home">joSoYoung</a>
@@ -145,12 +143,19 @@
             <li>
                 <a href="./webs/index.html">web publishing</a>
             </li>
+
+            <li class="desktop-only scroll" aria-hidden="true">
+                <span>scroll</span>
+                <div class="scroll-line"><div></div></div>
+            </li>
             
             <li>
                 <a href="mailto:cookr3@naver.com" aria-label="Contact Soyoung via email">contact</a>
             </li>
         </ul>
     </footer>
+
+    <div class="desktop-only cursor no-display" aria-hidden="true">view</div>
 
     <script src="./js/app.js"></script>
     <script src="./js/slider.js"></script>
