Add website works page & horizontal scroll

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="./webs/index.html">web publishing</a>
+                        <a href="./webs.html">web publishing</a>
                     </li>
                     <li>
                         <a href="mailto:cookr3@naver.com" aria-label="Contact Soyoung via email" target="_blank">contact</a>
@@ -172,7 +172,7 @@
     <footer>
         <ul>
             <li>
-                <a href="./webs/index.html">web publishing</a>
+                <a href="./webs.html">web publishing</a>
             </li>
             <li>
                 <a href="mailto:cookr3@naver.com" aria-label="메일로 연락하기" target="_blank">contact</a>
@@ -181,6 +181,6 @@
     </footer>
 
     <script src="./js/app.js"></script>
-    <script src="./js/skill-bar.js"></script>
+    <script src="./js/barAnimation.js"></script>
 </body>
 </html>
