--- a/about.html
+++ b/about.html
@@ -6,8 +6,17 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Frontend, Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>joSoYoung || About Me</title>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L59MKM5V5X"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-L59MKM5V5X');
+    </script>
+    <!-- End Google Analytics -->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- Google Analytics API Link -->
 </head>
 
 <body>
@@ -180,7 +189,7 @@
         </ul>
     </footer>
 
-    <script src="./js/app.js"></script>
+    <script src="./js/menu.js"></script>
     <script src="./js/barAnimation.js"></script>
 </body>
 </html>
