--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Frontend, Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>joSoYoung</title>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L59MKM5V5X"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-L59MKM5V5X');
+    </script>
+    <!-- End Google Analytics -->
+    <link rel="stylesheet" href="./css/intro.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- Google Analytics API Link -->
 </head>
 
 <body>
+    <div class="intro">
+        <div class="intro-text">
+            <h1 class="hide">
+                <span class="text">Try to be</span>
+            </h1>
+            <h1 class="hide">
+                <span class="text">Better and Better</span>
+            </h1>
+            <h1 class="hide">
+                <span class="text">Day by Day</span>
+            </h1>
+        </div>
+    </div>
+
+    <div class="slider" aria-hidden="true"></div>
+
     <header>
         <h1 class="logo">
             <a href="/" aria-label="Go home">joSoYoung</a>
@@ -58,7 +84,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="./webs/index.html">web publishing</a>
+                        <a href="./webs.html">web publishing</a>
                     </li>
                     <li>
                         <a href="mailto:cookr3@naver.com" aria-label="Contact Soyoung via email" target="_blank">contact</a>
@@ -121,7 +147,7 @@
             </li>
         </ul>
 
-        <ul class="work-title-list" aria-hidden="true"> <!-- Desktop Only-->
+        <ul class="work-title-list desktop-only" aria-hidden="true"> <!-- Desktop Only-->
             <h2 class="work-title">Momentum</h2>
             <h2 class="work-title">Meditation</h2>
             <h2 class="work-title">Drawing Board</h2>
@@ -141,7 +167,7 @@
     <footer>
         <ul>
             <li>
-                <a href="./webs/index.html">web publishing</a>
+                <a href="./webs.html">web publishing</a>
             </li>
 
             <li class="desktop-only scroll" aria-hidden="true">
@@ -157,7 +183,10 @@
 
     <div class="desktop-only cursor no-display" aria-hidden="true">view</div>
 
-    <script src="./js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
+    <script src="./js/intro.js"></script>
+    <script src="./js/menu.js"></script>
+    <script src="./js/cursor.js"></script>
     <script src="./js/slider.js"></script>
 </body>
 </html>
