--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Frontend, Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>joSoYoung</title>
+    <link rel="shortcut icon" href="./assets/favicon/joSoYoung.ico">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L59MKM5V5X"></script>
     <script>
