--- a/webs.html
+++ b/webs.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>joSoYoung || Web Publishing</title>
+    <link rel="shortcut icon" href="./assets/favicon/joSoYoung.ico">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L59MKM5V5X"></script>
     <script>
