Add intro effect

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="intro">
         <div class="intro-text">
             <h1 class="hide">
-                <span class="text">Try to be</span>
+                <span class="text">I strive to</span>
             </h1>
             <h1 class="hide">
-                <span class="text">Better and Better</span>
+                <span class="text">better myself</span>
             </h1>
             <h1 class="hide">
-                <span class="text">Day by Day</span>
+                <span class="text">everyday</span>
             </h1>
         </div>
     </div>
